feat: add footer and nav bar for the homepage enhance: add links and more page routing for  products

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,10 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+
+  .title-margin {
+    margin-inline-start: calc(-268.46154px + 28.36538vw);
+  }
 }
 
 @layer base {
