enhance: added SEO and replace all anchor tags with Link of react-router

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -15,8 +15,10 @@
     scrollbar-width: none; /* Firefox */
   }
 
-  .title-margin {
-    margin-inline-start: calc(-268.46154px + 28.36538vw);
+  @media (min-width: 768px) {
+    .title-margin {
+      margin-inline-start: calc(-268.46154px + 28.36538vw);
+    }
   }
 }
 
