devs op: added manifests k8s and docker

--- a/server/src/views/email-verification.ejs
+++ b/server/src/views/email-verification.ejs
@@ -49,7 +49,7 @@
     <div class="container">
       <h1>🎉 Email Verified!</h1>
       <p>Your email has been successfully verified.</p>
-      <a href="http://localhost:5173">Go back to apple web</a>
+      <a href="<%= frontendURL %>">Go back to apple web</a>
     </div>
   </body>
 </html>
