--- a/server/src/views/error.ejs
+++ b/server/src/views/error.ejs
@@ -50,7 +50,7 @@
     <div class="container">
       <h1>❌ Error</h1>
       <p><%= message %></p>
-      <a href="http://localhost:5173/profile">Go back to Profile</a>
+      <a href="<%= frontendURL %>/profile">Go back to Profile</a>
     </div>
   </body>
 </html>
